# cc-wake

./: .gitignore  LICENSE  README.md  cc-wake  demo.sh  pyproject.toml
cc_wake/: __init__.py  __main__.py  ccpost.c  collector.py  driver.py  server.py  transport.py
deploy/vercel/: README.md
deploy/vercel/api/: command.js  snapshot.js
deploy/vercel/public/: index.html
schema/: command.schema.json  snapshot.schema.json
